{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Vehicle",
            "id": "61ab6add-1f40-42da-9072-1704470a4512",
            "actions": [
                {
                    "name": "MoveVertically",
                    "type": "Value",
                    "id": "f3a021fe-dba3-40be-afaa-e0a05b29e5f4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveHorizontally",
                    "type": "Value",
                    "id": "88355c4f-41d9-4b20-b14f-e94b4274ed33",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "26c966b6-ed24-4557-b0f2-3055b0a9b123",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f1082150-46fa-45dd-b0ef-28072ccaab7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Nitro",
                    "type": "Button",
                    "id": "55bb5e00-5b1c-4b4b-80c0-4c9ced168bc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "64f510c2-4218-4f12-8e07-329c945382cf",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6c334741-ba24-431b-ae62-480cbefd04c7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "84aebb70-1ab9-40e4-ac95-2a547e3bd865",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WS",
                    "id": "1e761811-79a0-46ce-9a5d-91d1bee79325",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "82122940-a456-4b00-a3b3-472f4a92bfcb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "436a1848-1af6-435f-983e-3517cc507d54",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mobile",
                    "id": "648b6c44-a8ac-4e41-918c-b23f863aebef",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c8dede5e-ad5c-4340-a1c8-c501acbc612b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a33fb55b-912b-42aa-949b-711b2bf57661",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "8854aabc-1db2-4cef-b24f-2311e5cd04fc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5273a488-2de0-4f39-93b6-696cc5042703",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3624550e-b5c6-4124-ba38-62eb975bae08",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "bc46a793-e7c4-4494-aca4-9283490f5885",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a6fa244e-cea9-4249-b650-ee8030f9a505",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "94c3d166-a942-46a6-a1d8-d7ff9e9f82a9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mobile Arrows",
                    "id": "2f790aae-7174-408c-9fd4-3d5a6f9ae684",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ad5cbef1-64b0-4b01-8e61-7611fb9831f7",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d366700c-68c9-421f-9384-587abf2092ff",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3788dbcf-6a45-4c6c-92e3-2bb6c82ef92c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "325be0b0-bc9d-4518-b3c8-36e84e748efd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b27ffcb0-c57f-4277-a65d-086a05d7a14a",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a21b0ef-2536-47cf-96aa-04de109f0f6a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nitro",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80be1eb8-7a80-4033-856f-a1779e7736aa",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nitro",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}